--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,43 +8,54 @@
     <title>Brasil Acessivel</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-<header>
-    <img width="100" height="100" 
-    src="Logo.png" alt="Logo Brasil Acessível">
-    <h1>Projeto Brasil Acessível</h1>
-    <p>Seja bem vindo ao portal brasil acessível, aqui você encontrará serviços e locais que atendam suas necessidades!</p>
-</header>
-
-<div>
-    <h2>Nome do Estabelecimento</h2>
-    <img>
-    <p>Acessibilidade</p> <p>Nota do local</p>
-    <p>Informações Gerais</p> <p>Favoritar</p>
-    </div>
-<div>
-    <h2>Nome do Estabelecimento</h2>
-    <img>
-    <p>Acessibilidade</p> <p>Nota do local</p>
-    <p>Informações Gerais</p> <p>Favoritar</p>
-</div>
-<div>
-    <h2>Nome do Estabelecimento</h2>
-    <img>
-    <p>Acessibilidade</p> <p>Nota do local</p>
-    <p>Informações Gerais</p> <p>Favoritar</p>
-</div>
-<div>
-    <h2>Nome do Estabelecimento</h2>
-    <img>
-    <p>Acessibilidade</p> <p>Nota do local</p>
-    <p>Informações Gerais</p> <p>Favoritar</p>
-</div>
-
-<footer>
-    Fale Conosco<br>
-    Portal Brasil Acessível<br>
-    Sobre Nós
-</footer>
+    <header>
+        <img width="100" height="100" src="Imagens/Logo.png" alt="Logo Brasil Acessível">
+        <h1>Projeto Brasil Acessível</h1>
+        <p>Seja bem vindo ao portal brasil acessível, aqui você encontrará serviços e locais que atendam suas
+            necessidades!</p>
+    </header>
+    <main>
+        <h2>Destaque da Semana</h2>
+        <section>
+            <h3>Nome do Estabelecimento</h3>
+            <img>
+            <p>Acessibilidade</p>
+            <p>Nota do local</p>
+            <p>Informações Gerais</p>
+            <p>Favoritar</p>
+        </section>
+        <section>
+            <h3>Nome do Estabelecimento</h3>
+            <img>
+            <p>Acessibilidade</p>
+            <p>Nota do local</p>
+            <p>Informações Gerais</p>
+            <p>Favoritar</p>
+        </section>
+        <section>
+            <h3>Nome do Estabelecimento</h3>
+            <img>
+            <p>Acessibilidade</p>
+            <p>Nota do local</p>
+            <p>Informações Gerais</p>
+            <p>Favoritar</p>
+        </section>
+        <section>
+            <h3>Nome do Estabelecimento</h3>
+            <img>
+            <p>Acessibilidade</p>
+            <p>Nota do local</p>
+            <p>Informações Gerais</p>
+            <p>Favoritar</p>
+        </section>
+    </main>
+    <footer>
+        Fale Conosco<br>
+        Portal Brasil Acessível<br>
+        Sobre Nós
+    </footer>
 </body>
+
 </html>
