comentários no arquivo index para correção por parte do fernando

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<! aqui o lang deve ser pt-br, pois estamos no brasil. -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -25,6 +25,7 @@
             <p>Nota do local</p>
             <p>Informações Gerais</p>
             <p>Favoritar</p>
+<! aqui o favoritar deve ter semântica de button -->
         </section>
         <section>
             <h3>Nome do Estabelecimento</h3>
@@ -52,6 +53,7 @@
         </section>
     </main>
     <footer>
+<! os itens fale conosco, portal brasil acessível e sobre nós, devem ter suas semânticas definidas, se serão cabeçalhos, links ou botões. -->
         Fale Conosco<br>
         Portal Brasil Acessível<br>
         Sobre Nós
