ocultando a informação de rodapé para o NVDA

--- a/src/cadastro.html
+++ b/src/cadastro.html
@@ -40,9 +40,10 @@
 </div>
 </section>
 </main>
-<div id="rodape" aria-label="rodapé"></div>
-<footer aria-labelledby="rodape">
-    <a href="">Fale conosco</a>"
+<!-Ocultando a informação de rodapé para o NVDA-//<div id="rodape" aria-label="rodapé"></div>
+<!--//<footer aria-labelledby="rodape">-->
+<footer>
+    <a h	ref="">Fale conosco</a>"
 <br>
 <a href=""">Sobre nós</a>"
 </footer>
