alteração no logo

--- a/src/Estabelecimento 01.html
+++ b/src/Estabelecimento 01.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-     <img src="Imagens/Logo.png" alt="Logo Brasil Acessível">
+        <img width="100" height="100" src="Imagens/Logo.png" alt="Logo Brasil Acessível">
      <h1>Brasil Acessível</h1>
      <p>Seja bem vindo ao portal Brasil Acessível, aqui você encontrará serviços e locais que atendam suas necessidades!</p>
     </header>
