adicionando background na tela de cadastro

--- a/src/cadastro.html
+++ b/src/cadastro.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro - brasil acessível</title>
 </head>
-<body>
+<body style="background: blue">
     <header>
         <img width="100" height="100" src="Imagens/Logo.png" alt="Logo Brasil Acessível">
         <h1>Projeto Brasil Acessível</h1>
