--- a/src/cadastro.html
+++ b/src/cadastro.html
@@ -8,13 +8,17 @@
 </head>
 <body style="background: blue">
     <header>
+<a href="#principal">Ir para o conteúdo principal</a>
+<br>
+<a href="#rodape">Ir para o rodapé</a>
+<br>
         <img width="100" height="100" src="Imagens/Logo.png" alt="Logo Brasil Acessível">
         <h1>Projeto Brasil Acessível</h1>
         <p>Seja bem vindo ao portal brasil acessível, aqui você encontrará serviços e locais que atendam suas
             necessidades!</p>
     </header>
 <main>
-    <h2> Cadastro</h2>
+    <h2 id="principal"> Cadastro</h2>
 <p> Escolha o tipo de cadastro que deseja efetuar, se for um usuário comum que deseja utilizar o portal para consumir informações, cadastre-se como usuário comum, mas caso seja um prestador de serviço informal, ou seja, que não possui CNPJ, escolha a opção respectiva, ou ainda, se for uma empresa, selecione a opção de empresas</p><p></p>
     <fieldset>
         <legend>
@@ -40,12 +44,10 @@
 </div>
 </section>
 </main>
-<!-Ocultando a informação de rodapé para o NVDA-//<div id="rodape" aria-label="rodapé"></div>
-<!--//<footer aria-labelledby="rodape">-->
 <footer>
-    <a h	ref="">Fale conosco</a>"
+    <a href="" id="rodape">Fale conosco</a>
 <br>
-<a href=""">Sobre nós</a>"
+<a href="">Sobre nós</a>"
 </footer>
 </body>
 </html> 
