Incluindo meta tags Estabelecimento 01

--- a/src/Estabelecimento 01.html
+++ b/src/Estabelecimento 01.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8"
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estabelecimento 01 - Brasil Acessível</title>
-    <link rel="stylesheet" href="style.css">
+        <title>Estabelecimento 01 - Brasil Acessível</title>
+        <meta name="author" content="Felipe de Paula">
+        <meta name="description" content="estabelecimento com algum tipo de acessibilidade">
+        <meta name="keywords" content="estabelecimentos, acessibilidade, inclusão">
+        <meta name="copyright" content="© 2022 Brasil Acessível">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
