Acrescentando funcionalidades e informações
Foi acrescentado os botões Sign in e Log In, fotos dos estabelecimentos e os botões do Link Ancora

--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,18 @@
 
 <body>
     <header>
+        <a href="#principal">Ir para o conteúdo principal</a>
+        <br>
+        <a href="#rodape">Ir para o rodapé</a>
+        <br>
         <img width="100" height="100" src="Imagens/Logo.png" alt="Logo Brasil Acessível">
         <h1>Projeto Brasil Acessível</h1>
         <p>Seja bem vindo ao portal brasil acessível, aqui você encontrará serviços e locais que atendam suas
             necessidades!</p>
     </header>
-    
+    <button>Sign In</button>
+    <button>Log In</button>
+    <br>
     <select name="categoria" id="categoria">
         <option value="">Categoria</option>
         <option value="bares e restaurantes">Bares e Restaurantes</option>
@@ -24,12 +30,12 @@
         <option value="clinicas médicas">Clinicas Médicas</option>
         <option value="lojas de roupas">Lojas de Roupas</option>
     </select>
-    
+
     <main>
         <h2>Destaque da Semana</h2>
         <section>
             <h3>Nome do Estabelecimento</h3>
-            <img>
+            <img src="Imagens/restaurante.png" alt="Fachada restaurante">
             <p>Acessibilidade</p>
             <p>Nota do local</p>
             <p>Informações Gerais</p>
@@ -37,7 +43,7 @@
         </section>
         <section>
             <h3>Nome do Estabelecimento</h3>
-            <img>
+            <img src="Imagens/hotel.jpg" alt="Fachada hotel">
             <p>Acessibilidade</p>
             <p>Nota do local</p>
             <p>Informações Gerais</p>
@@ -45,7 +51,7 @@
         </section>
         <section>
             <h3>Nome do Estabelecimento</h3>
-            <img>
+            <img src="Imagens/medico.jpg" alt="Fachada clinica médica">
             <p>Acessibilidade</p>
             <p>Nota do local</p>
             <p>Informações Gerais</p>
@@ -53,17 +59,17 @@
         </section>
         <section>
             <h3>Nome do Estabelecimento</h3>
-            <img>
+            <img src="Imagens/loja.png" alt="Fachada loja de roupa">
             <p>Acessibilidade</p>
             <p>Nota do local</p>
             <p>Informações Gerais</p>
-            <p>Favoritar <input type="checkbox" name="acao" value="vel"></p> 
+            <p>Favoritar <input type="checkbox" name="acao" value="vel"></p>
         </section>
     </main>
     <footer>
-        <a href="fale_conosco.html">Fale Conosco</a><br>
-        <a href="portal_br_aces.html">Portal Brasil Acessível</a><br>
-        <a href="sobre_nos.html">Sobre Nós</a><br>
+        <a href="fale_conosco.html"> Fale Conosco</a><br>
+        <a href="portal_br_aces.html"> Portal Brasil Acessível</a><br>
+        <a href="sobre_nos.html"> Sobre Nós</a><br>
     </footer>
 </body>
 
