--- a/src/cadastro.html
+++ b/src/cadastro.html
@@ -19,35 +19,93 @@
     </header>
 <main>
     <h2 id="principal"> Cadastro</h2>
-<p> Escolha o tipo de cadastro que deseja efetuar, se for um usuário comum que deseja utilizar o portal para consumir informações, cadastre-se como usuário comum, mas caso seja um prestador de serviço informal, ou seja, que não possui CNPJ, escolha a opção respectiva, ou ainda, se for uma empresa, selecione a opção de empresas</p><p></p>
-    <fieldset>
-        <legend>
-       Opção de cadastro
-</legend>
-<label for="usuarioComum">Usuário comum</label>
-    <input type="radio" name="cadastro" id="usuarioComum">
-<br>
-    <label for="servicosInformais">Serviços Informais</label>
-    <input type="radio" name="cadastro" id="servicosInformais">
-<br>
-    <label for="empresas">Empresas</label>
-    <input type="radio" name="cadastro" id="empresas">
-    </fieldset>
+<p> Escolha o tipo de cadastro que deseja efetuar, se for um usuário comum que deseja utilizar o portal para consumir informações, cadastre-se como usuário comum, mas caso seja um prestador de serviço informal, ou seja, que não possui CNPJ, escolha a opção respectiva, ou ainda, se for uma empresa, selecione a opção de empresas</p>
+<ol>
+<li><button aria-pressed="false" id="usuario">Usuário comum</button></li>
+<li><button aria-pressed="false" id="prestador">Prestador de serviço</button></li>
+<li><button aria-pressed="false" id="empresa">Empresas com CNPJ</button></li>
+</ol>
 <section>
-<div style="display:none">
+<div style="display: none" id="demo">
 <form>
 <fieldset>
-<legend>Cadastro de usuário comum</legend>
+<legend aria-live="polite">Cadastro de usuário comum</legend>
 <label for="nomeCompleto">Nome Completo</label>
 <input type=text id="nomeCompleto" placeholder="João da silva">
 </form> 
 </div>
+<div id="demo2" style="display: none">
+<form>
+<fieldset>
+<legend aria-live="polite">Cadastro de prestador de serviço</legend>
+<input type="text">
+</fieldset>
+</form>
+</div>
+<div id="demo3" style="display: none">
+<form>
+<fieldset>
+<legend aria-live="polite">Cadastros de Empresas</legend>
+<input type="text">
+</fieldset>
+</div>
 </section>
+
 </main>
 <footer>
     <a href="" id="rodape">Fale conosco</a>
 <br>
-<a href="">Sobre nós</a>"
+<a href="">Sobre nós</a>
 </footer>
+<script>
+var btn1 = document.getElementById("usuario");
+var formulario = document.getElementById("demo");
+btn1.onclick = status
+var btn2 = document.getElementById("prestador");
+var formulario2 = document.getElementById("demo2");
+btn2.onclick = status2 
+var btn3 = document.getElementById("empresa");
+var formulario3 = document.getElementById("demo3");
+btn3.onclick = status3
+
+function status() {
+if(btn1.getAttribute("aria-pressed") == "false") {
+btn2.setAttribute("aria-pressed", "false");
+btn3.setAttribute("aria-pressed", "false");
+btn1.setAttribute("aria-pressed", "true")
+}
+if(btn1.getAttribute("aria-pressed") == "true") {
+formulario2.setAttribute("style", "display: none");
+formulario3.setAttribute("style", "display: none");
+formulario.setAttribute("style", "display: block")
+}
+}
+function status2() {
+if(btn2.getAttribute("aria-pressed") == "false") {
+btn1.setAttribute("aria-pressed", "false");
+btn3.setAttribute("aria-pressed", "false");
+btn2.setAttribute("aria-pressed", "true")
+}
+if(btn2.getAttribute("aria-pressed") == "true") {
+formulario.setAttribute("style", "display: none");
+formulario3.setAttribute("style", "display: none");
+formulario2.setAttribute("style", "display: block")
+}
+}
+function status3() {
+if(btn3.getAttribute("aria-pressed") == "false") {
+btn2.setAttribute("aria-pressed", "false");
+btn1.setAttribute("aria-pressed", "false");
+btn3.setAttribute("aria-pressed", "true")
+}
+if(btn3.getAttribute("aria-pressed") == "true") {
+formulario2.setAttribute("style", "display: none");
+formulario.setAttribute("style", "display: none");
+formulario3.setAttribute("style", "display: block")
+}
+}
+
+
+</script>
 </body>
 </html> 
