ajuste do link ancora

--- a/src/template.html
+++ b/src/template.html
@@ -27,7 +27,7 @@
     </main>
   
     <footer>
-        <a href="fale_conosco.html"> Fale Conosco</a><br>
+        <a  id="rodape" href="fale_conosco.html"> Fale Conosco</a><br>
         <a href="portal_br_aces.html"> Portal Brasil Acessível</a><br>
         <a href="sobre_nos.html"> Sobre Nós</a><br>
     </footer>
