--- a/src/cadastro.html
+++ b/src/cadastro.html
@@ -31,14 +31,118 @@
 <fieldset>
 <legend aria-live="polite">Cadastro de usuário comum</legend>
 <label for="nomeCompleto">Nome Completo</label>
-<input type=text id="nomeCompleto" placeholder="João da silva">
+<input type=text id="nomeCompleto" placeholder="João da silva" required>
+<br>
+<label for="datanasc">Data de nascimento</label>
+<input type="date" id="datanasc" name="dataNascimento" placeholder="DD/MM/AAAA" required>
+<label for="estado">Escolha seu Estado atual</label>
+<select id="estado" name="estado" required>
+    <option value="AC">Acre</option>
+    <option value="AL">Alagoas</option>
+    <option value="AP">Amapá</option>
+    <option value="AM">Amazonas</option>
+    <option value="BA">Bahia</option>
+    <option value="CE">Ceará</option>
+    <option value="DF">Distrito Federal</option>
+    <option value="ES">Espírito Santo</option>
+    <option value="GO">Goiás</option>
+    <option value="MA">Maranhão</option>
+    <option value="MT">Mato Grosso</option>
+    <option value="MS">Mato Grosso do Sul</option>
+    <option value="MG">Minas Gerais</option>
+    <option value="PA">Pará</option>
+    <option value="PB">Paraíba</option>
+    <option value="PR">Paraná</option>
+    <option value="PE">Pernambuco</option>
+    <option value="PI">Piauí</option>
+    <option value="RJ">Rio de Janeiro</option>
+    <option value="RN">Rio Grande do Norte</option>
+    <option value="RS">Rio Grande do Sul</option>
+    <option value="RO">Rondônia</option>
+    <option value="RR">Roraima</option>
+    <option value="SC">Santa Catarina</option>
+    <option value="SP">São Paulo</option>
+    <option value="SE">Sergipe</option>
+    <option value="TO">Tocantins</option>
+    <option value="EX">Estrangeiro</option>
+</select>
+<br>
+<label for="cidade">Cidade atual</label>
+<input type="text" id="cidade" name="cidade" required>
+<br>
+<label for="email">E-mail</label>
+<input type="email" id="email" placeholder="joaodasilva@example.com.br" name="email" required>
+<br>
+<label for="confirmacaoEmail">Confirme seu e-mail</label>
+<input type="email" id="confirmacaoEmail" name="confirmacaoEmail" placeholder="joaodasilva@example.com.br" required>
+<br>
+<label for="senha">Crie uma senha</label>
+<input type="password" id="senha" name="senha" required>
+<br>
+<label for="confirmacaoSenha">Confirme sua senha</label>
+<input type="password" id="confirmacaoSenha" name="confirmacaoSenha" required>
+<br>
+<button type="submit">Cadastrar Agora!</button>
+</fieldset>
 </form> 
 </div>
 <div id="demo2" style="display: none">
 <form>
 <fieldset>
 <legend aria-live="polite">Cadastro de prestador de serviço</legend>
-<input type="text">
+<label for="nomeCompleto">Nome Completo</label>
+<input type=text id="nomeCompleto" placeholder="João da silva" required>
+<br>
+<label for="datanasc">Data de nascimento</label>
+<input type="date" id="datanasc" name="dataNascimento" placeholder="DD/MM/AAAA" required>
+<label for="estado">Escolha seu Estado atual</label>
+<select id="estado" name="estado" required>
+    <option value="AC">Acre</option>
+    <option value="AL">Alagoas</option>
+    <option value="AP">Amapá</option>
+    <option value="AM">Amazonas</option>
+    <option value="BA">Bahia</option>
+    <option value="CE">Ceará</option>
+    <option value="DF">Distrito Federal</option>
+    <option value="ES">Espírito Santo</option>
+    <option value="GO">Goiás</option>
+    <option value="MA">Maranhão</option>
+    <option value="MT">Mato Grosso</option>
+    <option value="MS">Mato Grosso do Sul</option>
+    <option value="MG">Minas Gerais</option>
+    <option value="PA">Pará</option>
+    <option value="PB">Paraíba</option>
+    <option value="PR">Paraná</option>
+    <option value="PE">Pernambuco</option>
+    <option value="PI">Piauí</option>
+    <option value="RJ">Rio de Janeiro</option>
+    <option value="RN">Rio Grande do Norte</option>
+    <option value="RS">Rio Grande do Sul</option>
+    <option value="RO">Rondônia</option>
+    <option value="RR">Roraima</option>
+    <option value="SC">Santa Catarina</option>
+    <option value="SP">São Paulo</option>
+    <option value="SE">Sergipe</option>
+    <option value="TO">Tocantins</option>
+    <option value="EX">Estrangeiro</option>
+</select>
+<br>
+<label for="cidade">Cidade atual</label>
+<input type="text" id="cidade" name="cidade" required>
+<br>
+<label for="email">E-mail</label>
+<input type="email" id="email" placeholder="joaodasilva@example.com.br" name="email" required>
+<br>
+<label for="confirmacaoEmail">Confirme seu e-mail</label>
+<input type="email" id="confirmacaoEmail" name="confirmacaoEmail" placeholder="joaodasilva@example.com.br" required>
+<br>
+<label for="senha">Crie uma senha</label>
+<input type="password" id="senha" name="senha" required>
+<br>
+<label for="confirmacaoSenha">Confirme sua senha</label>
+<input type="password" id="confirmacaoSenha" name="confirmacaoSenha" required>
+<br>
+<button type="submit">Cadastrar Agora!</button>
 </fieldset>
 </form>
 </div>
