Correção na palavra Button
Correção na palavra button do "Deixe sua Avaliação" para que o botão aparecesse na tela do browser

--- a/src/Estabelecimento 01.html
+++ b/src/Estabelecimento 01.html
@@ -36,7 +36,7 @@
     </section>
     <section>
     <span>Nota do local=5</span>
-    <buton>Deixe sua avaliação</buton>
+    <button>Deixe sua avaliação</button>
     </section>
     <label for="favoritar">Favoritar estabelecimento</label>
     <input type="checkbox" id="favoritar" name="favoritar estabelecimento">
