--- a/src/template.html
+++ b/src/template.html
@@ -19,16 +19,16 @@
         <h1>Projeto Brasil Acessível</h1>
         <p>Seja bem vindo ao portal brasil acessível, aqui você encontrará serviços e locais que atendam suas
             necessidades!</p>
+        <button onclick="document.location='cadastro.html'">Sign In </button>
+        <button>Log In</button>
     </header>
 
     <main>
-
         
     </main>
-  
     <footer>
-        <a  id="rodape" href="fale_conosco.html"> Fale Conosco</a><br>
-        <a href="portal_br_aces.html"> Portal Brasil Acessível</a><br>
+        <a href="fale_conosco.html"> Fale Conosco</a><br>
+        <a href="acess_legal.html"> Acessibilidade Legal</a><br>
         <a href="sobre_nos.html"> Sobre Nós</a><br>
     </footer>
 </body>
