padronização da tela estabelecimento

--- a/src/Estabelecimento 01.html
+++ b/src/Estabelecimento 01.html
@@ -1,23 +1,28 @@
-    <!DOCTYPE html>
-    <html lang="pt-br">
-    <head>
-    <meta charset="UTF-8"
+<!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Estabelecimento 01 - Brasil Acessível</title>
-        <meta name="author" content="Felipe de Paula">
-        <meta name="description" content="estabelecimento com algum tipo de acessibilidade">
-        <meta name="keywords" content="estabelecimentos, acessibilidade, inclusão">
-        <meta name="copyright" content="© 2022 Brasil Acessível">
-        <link rel="stylesheet" href="style.css">
-    </head>
+    <title>Estabelecimento 01 - Brasil Acessível</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 
-    <body>
+<body>
     <header>
-    <img width="100" height="100" src="Imagens/Logo.png" alt="Logo Brasil Acessível">
-    <h1>Brasil Acessível</h1>
-    <p>Seja bem vindo ao portal Brasil Acessível, aqui você encontrará serviços e locais que atendam suas necessidades!</p>
+        <a href="#principal">Ir para o conteúdo principal</a>
+        <br>
+        <a href="#rodape">Ir para o rodapé</a>
+        <br>
+        <img width="100" height="100" src="Imagens/Logo.png" alt="Logo Brasil Acessível">
+        <h1>Projeto Brasil Acessível</h1>
+        <p>Seja bem vindo ao portal brasil acessível, aqui você encontrará serviços e locais que atendam suas
+            necessidades!</p>
+        <button onclick="document.location='cadastro.html'">Cadastre-se</button>
+        <button>Log In</button>
     </header>
+
     <main>
     <h2>Estabelecimento 01</h2>
     <section>
@@ -46,10 +51,10 @@
     </section>
     </main>
     <footer>
-    <a href="">Fale conosco</a>
-    <br>
-    <a href="">Sobre nós</a>
+        <a id="rodape" href="fale_conosco.html"> Fale Conosco</a><br>
+        <a href="acess_legal.html"> Acessibilidade Legal</a><br>
+        <a href="sobre_nos.html"> Sobre Nós</a><br>
     </footer>
-    </body>
+</body>
 
-    </html>
+</html>
