--- a/src/template.html
+++ b/src/template.html
@@ -19,15 +19,14 @@
         <h1>Projeto Brasil Acessível</h1>
         <p>Seja bem vindo ao portal brasil acessível, aqui você encontrará serviços e locais que atendam suas
             necessidades!</p>
-        <button onclick="document.location='cadastro.html'">Sign In </button>
-        <button>Log In</button>
+        <button onclick="document.location='cadastro.html'">Cadastrar</button><br>
+        <button>Log In</button><br>
     </header>
+<main>
 
-    <main>
-        
-    </main>
+</main>
     <footer>
-        <a href="fale_conosco.html"> Fale Conosco</a><br>
+        <a id="rodape" href="fale_conosco.html"> Fale Conosco</a><br>
         <a href="acess_legal.html"> Acessibilidade Legal</a><br>
         <a href="sobre_nos.html"> Sobre Nós</a><br>
     </footer>
