Inclusão de BR e "

--- a/src/cadastro.html
+++ b/src/cadastro.html
@@ -38,6 +38,7 @@
 <br>
 <label for="datanasc">Data de nascimento</label>
 <input type="date" id="datanasc" name="dataNascimento" placeholder="DD/MM/AAAA" required>
+<br>
 <label for="estado">Escolha seu Estado atual</label>
 <select id="estado" name="estado" required>
     <option value="AC">Acre</option>
@@ -105,6 +106,7 @@
 <br>
 <label for="datanasc2">Data de nascimento</label>
 <input type="date" id="datanasc2" name="dataNascimento" placeholder="DD/MM/AAAA" required>
+<br>
 <label for="estado2">Escolha o Estado atual da prestação do serviço</label>
 <select id="estado2" name="estado" required>
     <option value="AC">Acre</option>
@@ -148,7 +150,7 @@
 <label for="servico2">Qual é a prestação de serviço ofertada?</label>
 <input type="text" id="servico2" name="servico2" placeholder="ex: reparo de televisões e celulares" required>
 <br>
-<label for="endereco2>Endereço do local da prestação de serviço</label>
+<label for="endereco2">Endereço do local da prestação de serviço</label>
 <input type="text" id="endereco2" name="endereco2" placeholder="a domicílio/ se for local fixo preencher rua, número, bairro e cep" required>
 <br>
 <label for="email2">E-mail</label>
@@ -176,6 +178,7 @@
 <br>
 <label for="datanasc3">Data de nascimento</label>
 <input type="date" id="datanasc3" name="dataNascimento" placeholder="DD/MM/AAAA" required>
+<br>
 <label for="estado3">Escolha o estado atual da empresa</label>
 <select id="estado3" name="estado" required>
     <option value="AC">Acre</option>
@@ -222,7 +225,7 @@
 <label for="servico3">Qual é o tipo de estabelecimento?</label>
 <input type="text" id="servico3" name="servico3" placeholder="ex: restaurante" required>
 <br>
-<label for="endereco3>Endereço da empresa</label>
+<label for="endereco3">Endereço da empresa</label>
 <input type="text" id="endereco3" name="endereco3" placeholder="a domicílio/ se for local fixo preencher rua, número, bairro e cep" required>
 <br>
 <label for="email3">E-mail</label>
