inclusão do botão ir para página principal

--- a/src/Estabelecimento 01.html
+++ b/src/Estabelecimento 01.html
@@ -19,7 +19,8 @@
         <h1>Projeto Brasil Acessível</h1>
         <p>Seja bem vindo ao portal brasil acessível, aqui você encontrará serviços e locais que atendam suas
             necessidades!</p>
-        <button onclick="document.location='cadastro.html'">Cadastre-se</button>
+            <button onclick="document.location='index.html'">Ir para página principal</button>
+                    <button onclick="document.location='cadastro.html'">Cadastre-se</button>
         <button>Log In</button>
     </header>
 
