alterações tela estabelecimeno

--- a/src/Estabelecimento 01.html
+++ b/src/Estabelecimento 01.html
@@ -16,7 +16,7 @@
         <a href="#rodape">Ir para o rodapé</a>
         <br>
         <img width="100" height="100" src="Imagens/Logo.png" alt="Logo Brasil Acessível">
-        <h1>Projeto Brasil Acessível</h1>
+        <h1>Brasil Acessível</h1>
         <p>Seja bem vindo ao portal brasil acessível, aqui você encontrará serviços e locais que atendam suas
             necessidades!</p>
             <button onclick="document.location='index.html'">Ir para página principal</button>
