correção do arquivo banco de dados para json

--- a/src/index.html
+++ b/src/index.html
@@ -34,8 +34,8 @@
                 <option value="clinicas médicas">Clinicas Médicas</option>
                 <option value="lojas de roupas">Lojas de Roupas</option>
             </select><br>
-<label id="teste" for="textBusca">Busca de estabelecimentos</label>
-            <input type="text" id="txtBusca" placeholder="Digite aqui o estabelecimento que deseja procurar" /><br>
+<label for="busca">Busca de estabelecimentos</label>
+            <input type="text" id="busca"" placeholder="Digite aqui o estabelecimento que deseja procurar" /><br>
             <button id="btnBusca" type="submit">Buscar</button>
         </section>
         <h2>Destaque da Semana</h2>
