Ajuste de indentação do arquivo bancodados.js

--- a/src/Estabelecimento 01.html
+++ b/src/Estabelecimento 01.html
@@ -56,6 +56,8 @@
         <a href="acess_legal.html"> Acessibilidade Legal</a><br>
         <a href="sobre_nos.html"> Sobre Nós</a><br>
     </footer>
+
+    <script src="js/script.js"></script>
 </body>
 
 </html>
