atualização do index limpeza da section

--- a/src/index.html
+++ b/src/index.html
@@ -120,6 +120,7 @@ function muda() {
     let section = document.getElementById("conteudo");
 
     section.innerHTML = "";
+    conteudoHtml = "";
 
     for(let contador = 0; contador < restaurante.length; contador++) {
     let estabelecimento = restaurante[contador];
@@ -146,6 +147,7 @@ section.innerHTML = conteudoHtml;
     let section = document.getElementById("conteudo");
 
     section.innerHTML = "";
+    conteudoHtml = "";
 
     for(let contador = 0; contador < loja.length; contador++) {
     let estabelecimento = loja[contador];
